--- a/r5dev/vproj/clientsdk.vcxproj
+++ b/r5dev/vproj/clientsdk.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="..\squirrel\sqscript.cpp" />
     <ClCompile Include="..\squirrel\sqstdaux.cpp" />
     <ClCompile Include="..\squirrel\sqvm.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_utility.cpp" />
+    <ClCompile Include="..\thirdparty\imgui\misc\imgui_utility.cpp" />
     <ClCompile Include="..\tier0\commandline.cpp" />
     <ClCompile Include="..\tier0\cpu.cpp" />
     <ClCompile Include="..\tier0\cputopology.cpp" />
@@ -379,16 +379,7 @@
     <ClInclude Include="..\thirdparty\detours\include\detver.h" />
     <ClInclude Include="..\thirdparty\detours\include\idetour.h" />
     <ClInclude Include="..\thirdparty\detours\include\syelog.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imconfig.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imgui.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_impl_dx11.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_impl_win32.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_internal.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_stdlib.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_utility.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imstb_rectpack.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imstb_textedit.h" />
-    <ClInclude Include="..\thirdparty\imgui\include\imstb_truetype.h" />
+    <ClInclude Include="..\thirdparty\imgui\misc\imgui_utility.h" />
     <ClInclude Include="..\thirdparty\lzham\include\lzham.h" />
     <ClInclude Include="..\thirdparty\lzham\include\lzham_assert.h" />
     <ClInclude Include="..\thirdparty\lzham\include\lzham_checksum.h" />
@@ -629,7 +620,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>Default</LanguageStandard_C>
       <AdditionalOptions>/D "GAMESDK" /D "CLIENT_DLL" /D "_CRT_SECURE_NO_WARNINGS" /D "CURL_STATICLIB" /D "SPDLOG_COMPILED_LIB" %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\;$(ProjectDir)..\thirdparty\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\;$(ProjectDir)..\thirdparty\;$(ProjectDir)..\thirdparty\imgui\</AdditionalIncludeDirectories>
       <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
@@ -672,7 +663,7 @@
       </CreateHotpatchableImage>
       <WholeProgramOptimization>true</WholeProgramOptimization>
       <AdditionalOptions>/D "GAMESDK" /D "CLIENT_DLL" /D "_CRT_SECURE_NO_WARNINGS" /D "CURL_STATICLIB" /D "SPDLOG_COMPILED_LIB" /D "SPDLOG_NO_EXCEPTIONS" %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\;$(ProjectDir)..\thirdparty\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\;$(ProjectDir)..\thirdparty\;$(ProjectDir)..\thirdparty\imgui\</AdditionalIncludeDirectories>
       <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
     <Link>
@@ -718,7 +709,7 @@
       </CreateHotpatchableImage>
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <AdditionalOptions>/D "GAMESDK" /D "CLIENT_DLL" /D "_CRT_SECURE_NO_WARNINGS" /D "CURL_STATICLIB" /D "SPDLOG_COMPILED_LIB" %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\;$(ProjectDir)..\thirdparty\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\;$(ProjectDir)..\thirdparty\;$(ProjectDir)..\thirdparty\imgui\</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FloatingPointModel>Fast</FloatingPointModel>
     </ClCompile>
