--- a/r5dev/vproj/libimgui.vcxproj.filters
+++ b/r5dev/vproj/libimgui.vcxproj.filters
@@ -1,58 +1,59 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="include">
-      <UniqueIdentifier>{83a57cdd-4776-47d1-b7c4-c6986dcbab9f}</UniqueIdentifier>
+    <Filter Include="backends">
+      <UniqueIdentifier>{c3c0b872-56c3-40fc-a503-01ae93b96a2a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="misc">
+      <UniqueIdentifier>{33a9c0e4-1df1-4eb9-9d14-a9c2fd16fea0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="misc\cpp">
+      <UniqueIdentifier>{dc171a1f-e261-4e8a-8cfa-ab4fb59c8d02}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\thirdparty\imgui\include\imconfig.h">
-      <Filter>include</Filter>
+    <ClInclude Include="..\thirdparty\imgui\backends\imgui_impl_dx11.h">
+      <Filter>backends</Filter>
     </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imgui.h">
-      <Filter>include</Filter>
+    <ClInclude Include="..\thirdparty\imgui\backends\imgui_impl_win32.h">
+      <Filter>backends</Filter>
     </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_impl_dx11.h">
-      <Filter>include</Filter>
+    <ClInclude Include="..\thirdparty\imgui\misc\cpp\imgui_stdlib.h">
+      <Filter>misc\cpp</Filter>
     </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_impl_win32.h">
-      <Filter>include</Filter>
+    <ClInclude Include="..\thirdparty\imgui\misc\imgui_editor.h">
+      <Filter>misc</Filter>
     </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_internal.h">
-      <Filter>include</Filter>
+    <ClInclude Include="..\thirdparty\imgui\misc\imgui_logger.h">
+      <Filter>misc</Filter>
     </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_stdlib.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_utility.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imstb_rectpack.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imstb_textedit.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imstb_truetype.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_editor.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\thirdparty\imgui\include\imgui_logger.h">
-      <Filter>include</Filter>
-    </ClInclude>
+    <ClInclude Include="..\thirdparty\imgui\imgui_internal.h" />
+    <ClInclude Include="..\thirdparty\imgui\imstb_rectpack.h" />
+    <ClInclude Include="..\thirdparty\imgui\imstb_textedit.h" />
+    <ClInclude Include="..\thirdparty\imgui\imstb_truetype.h" />
+    <ClInclude Include="..\thirdparty\imgui\imconfig.h" />
+    <ClInclude Include="..\thirdparty\imgui\imgui.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\thirdparty\imgui\src\imgui.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_demo.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_draw.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_impl_dx11.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_impl_win32.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_stdlib.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_tables.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_widgets.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_editor.cpp" />
-    <ClCompile Include="..\thirdparty\imgui\src\imgui_logger.cpp" />
+    <ClCompile Include="..\thirdparty\imgui\backends\imgui_impl_win32.cpp">
+      <Filter>backends</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\imgui\backends\imgui_impl_dx11.cpp">
+      <Filter>backends</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\imgui\misc\cpp\imgui_stdlib.cpp">
+      <Filter>misc\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\imgui\misc\imgui_logger.cpp">
+      <Filter>misc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\imgui\misc\imgui_editor.cpp">
+      <Filter>misc</Filter>
+    </ClCompile>
+    <ClCompile Include="..\thirdparty\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\thirdparty\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\thirdparty\imgui\imgui_tables.cpp" />
+    <ClCompile Include="..\thirdparty\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="..\thirdparty\imgui\imgui.cpp" />
   </ItemGroup>
 </Project>
